added alert massage

--- a/index.html
+++ b/index.html
@@ -144,8 +144,15 @@ generations.    </p>
 <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
 <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
   <div class="modal-box">
-    <h3 class="text-lg font-bold">Hello!</h3>
-    <p class="py-4">Press ESC key or click the button below to close</p>
+    <div id="plant-details-container">
+        <div class="p-2 space-x-3">
+            <h2>Plant title</h2>
+            <img class="rounded-md h-80 w-full" src="./assets/hero-leaf1.png" alt="">
+            <p>Category:Talgas</p>
+            <p>Price:<i class="fa-solid fa-bangladeshi-taka-sign"></i>500</p>
+            <p>Description</p>
+        </div>
+    </div>
     <div class="modal-action">
       <form method="dialog">
         <!-- if there is a button in form, it will close the modal -->
