added mobile responsive

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li><a>Plant a Tree</a></li>
       </ul>
     </div>
-    <a class="btn btn-ghost text-xl text-white"><img class="h-8 w-8" src="./assets/logo.png" alt="">Green earth</a>
+    <a class="btn bg-green-700 shadow-none border-none text-xl text-white"><img class="h-8 w-8" src="./assets/logo.png" alt="">Green earth</a>
   </div>
   <div class="navbar-center hidden lg:flex">
     <ul class="menu menu-horizontal px-1 text-white">
@@ -56,7 +56,7 @@
     </header>
     <!-- banner section -->
     <section class="bg-[#cff0dc]">
-        <div class="w-12/12 flex justify-evenly items-center mx-auto py-10">
+        <div class="w-12/12 flex justify-evenly items-center mx-auto pt-5 pb-5 md:pb-0">
             <div><img src="./assets/hero-leaf1.png" alt=""></div>
             <div class="text-center space-y-3">
                 <h1 class="font-bold text-4xl">Plant a Tree, Grow a Future</h1>
