--- a/index.html
+++ b/index.html
@@ -132,7 +132,20 @@ generations.    </p>
         <form class="bg-green-700 p-5 space-y-4 rounded-lg" action="">
             <input type="text" placeholder="Type here" class="input w-full" />
             <input type="text" placeholder="Type here" class="input w-full" />
-            <input type="text" placeholder="Type here" class="input w-full" />
+        <div class="dropdown w-full">
+            <div tabindex="0" role="button" class="input input-bordered w-full flex justify-between items-center cursor-pointer">
+                <span>Number of trees</span>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                </svg>
+            </div>
+            <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-[1] w-full p-2 shadow">
+                <li class="hover:bg-blue-500 hover:text-white"><a>1 Tree $5</a></li>
+                <li class="hover:bg-blue-500 hover:text-white"><a>2 tree $25</a></li>
+                <li class="hover:bg-blue-500 hover:text-white"><a>10 Tree $50</a></li>
+            </ul>
+        </div>
+
             <button class="btn btn-xs w-full bg-yellow-400 text-green-600 border-none">Donate Now</button>
         </form>
     </div>
