--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ generations.    </p>
         <div class="w-11/12 grid grid-cols-1 md:grid-cols-6 gap-2 mx-auto mt-10">
             <div class="col-span-1">
                 <h2 class="font-bold mb-3 text-2xl text-center md:text-left">Categories</h2>
-                <ul id="category-list" class="flex flex-col gap-2 items-center md:items-start">
+                <ul id="category-list" class="flex flex-col gap-2">
 
                 </ul>
             </div>
